# kalypso-base

./: Cargo.toml  README.md
common/: Cargo.toml
common/src/: lib.rs
ivs/: Cargo.toml
ivs/src/: handler.rs  main.rs
prover/: Cargo.toml
prover-executable/: Cargo.toml
prover-executable/src/: handler.rs
prover/src/: handler.rs  main.rs
