[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.7.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
bindings = { path = "../bindings", package = "foundry-contracts"}
aes-gcm = "0.10.3"
ecies = { version = "0.2.7", features = ["std"] }
openssl = { version = "0.10.64", features = ["vendored"] }
ethers = { version = "2.0.14", features = ["abigen", "ws", "rustls"] }

[dev-dependencies]
hex = "0.4"