[package]
name = "prover-executable"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.7.0"
common = { path = "../common" }
serde_json = "1.0.117"
prover ={ path ="../prover", features = ["confidential"]}
ivs ={ path ="../ivs", features = ["confidential"]}

[features]
default = ["confidential"]
confidential = ["common/confidential"]